# 2024-ectf-insecure-example

./: .gitignore  LICENSE.txt  README.md  pyproject.toml  run.sh  shell.nix
Code warehousec/c/: Rand_lib.c
Code_warehouse/c/: Key_exchange.c  Rand_lib.c  Rand_lib.h  rand_example.c
Design_Doc/Images/: Untitled Diagram.drawio
Py_script/: aes_decrypt.c  ectf_params.h  ectf_params_AP.h  encrypt.c  encryption.py
application_processor/: .clang-format  Makefile  ap_making.py  encryption.py  project.mk
application_processor/inc/: board_link.h  cache_disable.h  disable_cache.h  ectf_params.h  ectf_params_AP.h  host_messaging.h  key.h  key_exchange.h  op_codes.h  settings.h  simple_crypto.h  simple_flash.h  simple_i2c_controller.h  xor_secure.h
application_processor/src/: application_processor.c  board_link.c  host_messaging.c  key.c  key_exchange.c  simple_crypto.c  simple_flash.c  simple_i2c_controller.c  xor_secure.c
application_processor/wolfssl/: .build_params  Makefile  Makefile.in  aclocal.m4  aminclude.am  config.h  config.in  config.status  configure  configure~  ecc-key-pkcs8.der  ecc-key.der  ecc-public-key.der  (+2 more)
component/: Makefile  comp_making.py  firmware.ld  project.mk  startup_firmware.S
custom_nix_pkgs/: analog_openocd.nix
deployment/: 0x11111124.txt  0x11111125.txt  0x123444.txt  0x123455.txt  0x334521.txt  Makefile  bsp.c  cc.csv  global_secrets.h  import_csv.py
ectf_tools/: .flake8  attestation_tool.py  boot_tool.py  build_ap.py  build_comp.py  build_depl.py  list_tool.py  replace_tool.py  update.py  utils.py
tests/: test_encryption.c
(+155 files in other folders)
